Fixing some layout bugs

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -57,8 +57,3 @@ body {
   box-shadow:  0px 0px 15px 0px rgba(0, 0, 0, 0.7);
   border:1px solid rgba(0, 0, 0, 0.5);
 }
-.mention_link {
-  margin-left:2px;
-  margin-right:2px;
-  padding:5px;
-}
